# Stellar-Global-Payments

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  deploy.sh  deploy_testnet.sh
.claude/: settings.local.json
backend/: .env.example  README.md  env.example  package-lock.json  package.json  tsconfig.json
backend/.claude/: settings.local.json
backend/src/: config.ts  constants.ts  errors.ts  index.ts  types.ts
backend/src/controllers/: forex.ts  multisig.ts  payments.ts
backend/src/lib/: forex.ts  soroban.ts  soroswap.ts  stellar.ts
backend/src/middleware/: auth.ts  errorHandler.ts
backend/src/utils/: currency.ts  validation.ts
contracts/: Cargo.toml  package.json
contracts/multisig/: Cargo.toml
contracts/multisig/src/: lib.rs
contracts/scripts/: deploy.ts
contracts/src/: lib.rs  test.rs
frontend/: iframe-test.html  index.html  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx  types.ts
frontend/src/components/: AccountMarker.tsx  ForexModal.tsx  MultisigModal.tsx  TransferModal.tsx
frontend/src/hooks/: useAccounts.ts  useForexBalances.ts  useMultisigState.ts
frontend/src/pages/: Admin.tsx
frontend/src/styles/: global.css
prompts/: 0x01-initialSpec,.md  0x02-smartAccounts.md  0x03-mainnet.md  0x04-forex.md  0x05-multsig.md  0x06-testnet.md
shared/config/: accounts.example.json  accounts.local.json  accounts.testnet.json  network.d.ts  network.js
