[package]
name = "multisig_treasury"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = "23.1.0"
stellar-accounts = "0.5.0"

[dev-dependencies]
soroban-sdk = { version = "23.1.0", features = ["testutils"] }
stellar-accounts = "0.5.0"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
